--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "form-data": "^4.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^11.1.0",
     "mongodb": "^6.12.0",
     "stripe": "^17.6.0"
   }
